<resources>
    <string name="app_name">Town Tour</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogen_name">We will help you to find your way !</string>
    <string name="slogan_name">Everything your city holds is here</string>
    <string name="Powered_by">Powered by gujarex</string>


    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>
    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!--Categories-->

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>
    <string name="airports">Airports</string>

    <!--Titles and Descriptions-->

    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search</string>

    <!--      Menu Names      -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>

    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>


    <string name="car_rent">Car Rent</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="hospital">Hospital</string>
    <string name="meals">Meals</string>


    I<!-- General Strings -->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow \nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create Account</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="password">Password</string>


    <!-- OTP string-->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+918879784099</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_password_details">provide your account\'s email for which you want to reset your password</string>
    <string name="make_selection_details">Select which contact detail should we use to reset your password</string>
    <string name="make_selection">Make selection</string>
    <string name="new_credential">New Credential</string>
    <string name="new_credential_detail">your identity has been verified\n set your new password</string>
    <string name="password_updated">Password Updated</string>
    <string name="validateAgeToast">You are not eligible to apply</string>
    <string name="OTpassword">Enter One Time Password Sent On</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Contributing second times -->
    <string name="validateAgeToastnew">You are not eligible to apply new</string>
    <string name="OTpasswordnew">Enter One Time Password Sent On new</string>
    <string name="hello_blank_fragmentnew">Hello blank fragment new</string>
</resources>